--- a/views/quizPortal.ejs
+++ b/views/quizPortal.ejs
@@ -104,7 +104,7 @@
     <section class="py-5 header">
         <div class="container-fluid py-4">
             <header class="text-center mb-5 pb-5 text-white">
-                <h1 class="display-4">IETE Recruitment Exam <span style="text-transform: uppercase;"
+                <h1 class="display-4">Recruitment Exam <span style="text-transform: uppercase;"
                         id="domain-info"><%= domain %> </span>Domain</h1>
                 <h6 class="time">Time Remaining: </h6>
                 <h6 class="time special" id="timeRemaining"></h6>
@@ -170,11 +170,7 @@
 
     </section>
 
-    <div class="footer">
-        <a>
-            <div class="fixed-bottom footer-content">For any issues, Contact us at <strong>+91 8754583601</strong></div>
-        </a>
-    </div>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
