--- a/views/verificationPage.ejs
+++ b/views/verificationPage.ejs
@@ -28,9 +28,7 @@
     <!-- Nav Bar -->
     <div class="container-fluid Navbar-Section">
         <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
-            <a href="/" class="navbar-brand">
-                <img src="/images/IETE WHITE.png" width="60" height="60" alt="">
-            </a>
+
             <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -42,46 +40,33 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
 
-                    <li class="nav-item divider-vertical">
-                        <a class="nav-link" href="/about">About</a>
-                    </li>
 
                     <li class="nav-item divider-vertical">
                         <a class="nav-link r-tab" href="/recruitments">Recruitments</a>
                     </li>
                     <% if(user){ %>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-user"></i>
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a style="color: black!important;" class="dropdown-item" href="/logout">Logout</a>
-                        </div>
-                    </li>
-                    <% if(!user.verified){ %>
-                    <li class="nav-item divider-vertical">
-                        <a class="nav-link" style="color: red;" href="/verificationPage">Verify</a>
-                    </li>
-                    <% } %>
-                    <% }else{ %>
-                    <li class="nav-item divider-vertical">
-                        <a class="nav-link" href="/login/user">Login</a>
-                    </li>
-                    <% } %>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-user"></i>
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a style="color: black!important;" class="dropdown-item" href="/logout">Logout</a>
+                            </div>
+                        </li>
+                        <% if(!user.verified){ %>
+                            <li class="nav-item divider-vertical">
+                                <a class="nav-link" style="color: red;" href="/verificationPage">Verify</a>
+                            </li>
+                            <% } %>
+                                <% }else{ %>
+                                    <li class="nav-item divider-vertical">
+                                        <a class="nav-link" href="/login/user">Login</a>
+                                    </li>
+                                    <% } %>
 
                 </ul>
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-icons" href="https://www.facebook.com/ieteisf"><img src="/images/facebook.png"
-                                width="40" height="40" alt=""></a> <a class="nav-icons"
-                            href="https://www.instagram.com/iete_vit/"><img src="/images/instagram-sketched.png"
-                                width="40" height="40" alt=""></a><a class="nav-icons"
-                            href="https://www.linkedin.com/company/iete-isf/"><img src="/images/linkedin.png" width="40"
-                                height="40" alt=""></a>
-                    </li>
 
-                </ul>
 
             </div>
         </nav>
@@ -93,52 +78,50 @@
             <div class="inner">
                 <% if(passedMessage){ %>
 
-                <div class="alert alert-danger alert-dismissible fade show container" role="alert">
-                    <strong>Oops!</strong> <%= passedMessage %>
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <% }else{ %>
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    <strong>Hey!</strong> An OTP has been sent to your email Id.
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <% } %>
-
-                <form action="/verifyAccount" method="POST">
-                    <h3>Verify Your Account</h3>
-
-                    <div class="form-wrapper">
-
-                        <label>
-                            <input name="generatedOtp"
-                                placeholder="Please Enter the OTP you got on your Provided Email ID" type="text"
-                                class="form-control">
-
-                        </label>
-
+                    <div class="alert alert-danger alert-dismissible fade show container" role="alert">
+                        <strong>Oops!</strong>
+                        <%= passedMessage %>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
                     </div>
-                    <br>
+                    <% }else{ %>
+                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                            <strong>Hey!</strong> An OTP has been sent to your email Id.
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <% } %>
+
+                            <form action="/verifyAccount" method="POST">
+                                <h3>Verify Your Account</h3>
+
+                                <div class="form-wrapper">
+
+                                    <label>
+                                        <input name="generatedOtp"
+                                            placeholder="Please Enter the OTP you got on your Provided Email ID"
+                                            type="text" class="form-control">
+
+                                    </label>
+
+                                </div>
+                                <br>
 
 
-                    <button class="button" type="submit">Verify</button>
-                    <p style="text-align: center;padding-top:40px; font-size:1.2rem"><a href="/register/user">Register
-                            with another Email Id</a></p>
+                                <button class="button" type="submit">Verify</button>
+                                <p style="text-align: center;padding-top:40px; font-size:1.2rem"><a
+                                        href="/register/user">Register
+                                        with another Email Id</a></p>
 
 
-                </form>
+                            </form>
             </div>
         </div>
 
 
-        <!--Footer-->
-        <div class="footer">
-            <div class="fixed-bottom footer-content">Visit us at <strong><a
-                        href="https://ietevit.com/">https://ietevit.com/</a></strong></div>
-        </div>
+
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
