New Images added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,9 @@
     <!-- Nav Bar -->
     <div class="container-fluid Navbar-Section">
         <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
-
+            <a class="navbar-brand" href="#">
+                <img src="/images/logo-3.png" width="30" height="30" alt="">
+            </a>
             <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -89,19 +91,27 @@
                 </button>
             </div>
             <% } %>
-                <div class="heading">
-                    <h1>Welcome</h1>
+                <div>
+                    <img src="/images/home-img.jpg" class="rounded float-right" alt="" srcset="">
                 </div>
+                <div class="heading">
+                    <h1>Welcome!</h1>
+                </div>
+
                 <div class="sub-heading">
-                    <h4>This is the Home Page.</h4>
+                    <h4>This is Staff Recruitment Portal.</br>Head to Recruitment Portal to give your Test.</br>
+                        All The Best!</h4>
                 </div>
                 <div class="main-button">
                     <a href="/recruitments">
 
-                        GO TO RECRUITMENTS PORTAL &nbsp;&nbsp; <i class="fas fa-chevron-right"></i>
+                        GO TO RECRUITMENT PORTAL &nbsp;&nbsp; <i class="fas fa-chevron-right"></i>
 
                     </a>
+
                 </div>
+
+
 
 
     </div>
