--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,9 @@
     <!-- Nav Bar -->
     <div class="container-fluid Navbar-Section">
         <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
-
+            <a class="navbar-brand" href="#">
+                <img src="/images/logo-3.png" width="30" height="30" alt="">
+            </a>
             <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                 aria-label="Toggle navigation">
