--- a/views/home.ejs
+++ b/views/home.ejs
@@ -92,7 +92,7 @@
             </div>
             <% } %>
                 <div>
-                    <img src="/images/home-img.jpg" class="rounded float-right home-img" alt="" srcset="">
+                    <img src="/images/homeimg.jpg" class="rounded float-right home-img" alt="" srcset="">
                 </div>
                 <div class="heading">
                     <h1>Welcome!</h1>
