--- a/views/home.ejs
+++ b/views/home.ejs
@@ -92,8 +92,10 @@
             </div>
             <% } %>
                 <div>
-                    <img src="https://online-examination-portal.herokuapp.com/images/homeimg.jpg"
-                        class="rounded float-right home-img" alt="" srcset="">
+                    <img src="https://i.ibb.co/Gnt5thJ/home-img.jpg" class="rounded float-right home-img" alt=""
+                        srcset="">
+
+
                 </div>
                 <div class="heading">
                     <h1>Welcome!</h1>
