--- a/views/adminPanel/adminPanel.ejs
+++ b/views/adminPanel/adminPanel.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jquery </title>
+    <title>Recruitment Manager Panel </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <style>
@@ -26,7 +26,7 @@
 
 <body>
     <div class="main">
-        <h1>Admin Portal</h1>
+        <h1>Recruitment Manager Portal</h1>
 
         <form method="post" action="/admin/questionSubmit" autocomplete="off">
             <!--Domain Name-->
