--- a/views/home.ejs
+++ b/views/home.ejs
@@ -67,6 +67,9 @@
                                     <li class="nav-item divider-vertical">
                                         <a class="nav-link" href="/login/user">Login</a>
                                     </li>
+                                    <li class="nav-item divider-vertical">
+                                        <a class="nav-link" href="/register/user">Register</a>
+                                    </li>
                                     <% } %>
 
 
