--- a/views/home.ejs
+++ b/views/home.ejs
@@ -106,7 +106,7 @@
 
                 <div class="sub-heading">
                     <h4>This is Staff Recruitment Portal.</br>Head to Recruitment Portal to give your Test.</br>
-                        All The Best!!</h4>
+                        All The Best!</h4>
                 </div>
                 <div class="main-button">
                     <a href="/recruitments">
