--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,6 +48,7 @@
                     <li class="nav-item divider-vertical">
                         <a class="nav-link" href="/recruitments">Recruitments</a>
                     </li>
+
                     <% if(user){ %>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -73,7 +74,9 @@
                                     <% } %>
 
 
-
+                                        <li class="nav-item divider-vertical">
+                                            <a class="nav-link" href="/stafflogin">Staff Login</a>
+                                        </li>
 
                 </ul>
 
