--- a/views/login.ejs
+++ b/views/login.ejs
@@ -64,6 +64,10 @@
                             </li>
                             <% } %>
 
+                                <li class="nav-item divider-vertical">
+                                    <a class="nav-link" href="/stafflogin">Staff Login</a>
+                                </li>
+
                 </ul>
 
             </div>
@@ -99,8 +103,8 @@
                                 </label>
                             </div>
                             <button class="button" type="submit">Log In</button>
-                            <p style="text-align: center;padding-top:40px; font-size:1.2rem"> <a
-                                    href="/forgot">Forgot password?</a></p>
+                            <p style="text-align: center;padding-top:40px; font-size:1.2rem"> <a href="/forgot">Forgot
+                                    password?</a></p>
                         </form>
                     </div>
                 </div>
